--- a/layouts/_default/baseof.html
+++ b/layouts/_default/baseof.html
@@ -34,19 +34,19 @@
 
   {{ partial "favicon" . }}
 
-  <link href="{{ $.Site.BaseURL }}/css/font.css" rel="stylesheet" type="text/css">
-  <link href="{{ $.Site.BaseURL }}/css/kube.min.css" rel="stylesheet" type="text/css">
-  <link href="{{ $.Site.BaseURL }}/css/kube.legenda.css" rel="stylesheet" type="text/css">
-  <link href="{{ $.Site.BaseURL }}/css/highlight.css" rel="stylesheet" type="text/css">
-  <link href="{{ $.Site.BaseURL }}/css/master.css" rel="stylesheet" type="text/css">
-  <link href="{{ $.Site.BaseURL }}/css/kube.demo.css" rel="stylesheet" type="text/css">
+  <link href="/css/font.css" rel="stylesheet" type="text/css">
+  <link href="/css/kube.min.css" rel="stylesheet" type="text/css">
+  <link href="/css/kube.legenda.css" rel="stylesheet" type="text/css">
+  <link href="/css/highlight.css" rel="stylesheet" type="text/css">
+  <link href="/css/master.css" rel="stylesheet" type="text/css">
+  <link href="/css/kube.demo.css" rel="stylesheet" type="text/css">
 <!-- Your own theme here -->
- <link href="{{ $.Site.BaseURL }}/css/custom.css" rel="stylesheet" type="text/css">
+ <link href="/css/custom.css" rel="stylesheet" type="text/css">
 <!-- js vendor -->
-  <script src="{{ $.Site.BaseURL }}/js/jquery-2.1.4.min.js" type="text/javascript">
+  <script src="/js/jquery-2.1.4.min.js" type="text/javascript">
   </script>
 
-  <script type="text/javascript" src="{{ $.Site.BaseURL }}/js/tocbot.min.js"></script>
+  <script type="text/javascript" src="/js/tocbot.min.js"></script>
 </head>
 
 
@@ -56,11 +56,11 @@
   <footer>{{ block "footer" . }}{{ end }}</footer>
 
 
-  <script src="{{ $.Site.BaseURL }}/js/kube.js" type="text/javascript">
+  <script src="/js/kube.js" type="text/javascript">
   </script>
-  <script src="{{ $.Site.BaseURL }}/js/kube.legenda.js" type="text/javascript">
+  <script src="/js/kube.legenda.js" type="text/javascript">
   </script>
-  <script src="{{ $.Site.BaseURL }}/js/master.js" type="text/javascript">
+  <script src="/js/master.js" type="text/javascript">
   </script>
 </body>
 
