--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -3,15 +3,17 @@
 
 {{ define "main" }}
 
-<div id="hero" class="wrap">
-  <h1>{{.Title }}</h1>
-    <p>{{.Params.description}}</p>
+<div class="container">
+  <div id="hero" class="wrap">
+    <h1>{{.Title }}</h1>
+      <p>{{.Params.description}}</p>
+  </div>
+  <ul id="posts">
+
+   {{ .Content }}
+
+  </ul>
 </div>
-<ul id="posts">
-
- {{ .Content }}
-
-</ul>
 {{ end }}
 {{ define "footer" }}
   {{ partial "footer" . }}
