--- a/layouts/news/list.html
+++ b/layouts/news/list.html
@@ -3,15 +3,17 @@
 
 {{ define "main" }}
 
-<div id="hero" class="wrap">
-  <h1>Voice of {{.Site.Params.author }} Team</h1>
-    <p>Our vision, news and ideas, and whatever feels important.<br> <a href="https://t.me/{{.Site.Params.telegram}}" target="_blank">Join the community on Telegram</a></p>
-</div>
-<ul id="posts">
+<div class="container">
+  <div id="hero" class="wrap">
+    <h1>Voice of {{.Site.Params.author }} Team</h1>
+      <p>Our vision, news and ideas, and whatever feels important.<br> <a href="https://t.me/{{.Site.Params.telegram}}" target="_blank">Join the community on Telegram</a></p>
+  </div>
+  <ul id="posts">
 
- {{ range .Paginator.Pages.ByWeight }} {{ partial "page-summary" . }} {{ end }}
-  <section>{{ partial "pagination" .}}</section>
-</ul>
+   {{ range .Paginator.Pages.ByWeight }} {{ partial "page-summary" . }} {{ end }}
+    <section>{{ partial "pagination" .}}</section>
+  </ul>
+</div>
 
 {{ end }}
 {{ define "footer" }}
