--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,27 +1,32 @@
-<div class="show-sm">
-    <div id="nav-toggle-box">
-      <div id="nav-toggle-brand">
-        <a href="/">Tropyc</a>
-      </div><a data-component="toggleme" data-target="#top" href="#" id="nav-toggle"><i class="kube-menu"></i></a>
-    </div>
-  </div>
-  <div class="hide-sm" id="top">
-    <div id="top-brand">
-      <a href="/" title="home">Tropyc</a>
-    </div>
-    <nav id="top-nav-main">
-      <ul>
-       {{ $currentPage := . }}
-       {{ range .Site.Menus.main }}
-    <li><a href="{{ .URL }}" {{if  $currentPage.IsMenuCurrent "main" . }} class="active"{{end}}>{{ .Name }}</a></li>
+<div class="navbar-tropyc">
+  <!-- Logo -->
+  <a href="/" title="home" class="navbar-tropyc-brand">
+    <img src="/images/{{ index .Site.Data.images.hash "tropyc-logo.png" }}" alt="logo">
+    <span class="navbar-tropyc-brand__name">tropyc.</span>
+  </a>
+
+  <!-- Right Navigation -->
+  <div class="navbar-tropyc-right hidden-sm-down">
+    {{ $currentPage := . }}
+    {{ range .Site.Menus.main }}
+      <a href="{{ .URL }}" class="navbar-tropyc-item navbar-tropyc-link" {{if  $currentPage.IsMenuCurrent "main" . }} class="active"{{end}}>{{ .Name }}</a>
     {{end}}
-      </ul>
-    </nav>
-    <nav id="top-nav-extra">
-      <ul>
-        <li>
-          <a href="/premium/">Premium</a>
-        </li>
-      </ul>
-    </nav>
   </div>
+  <div>
+    <a href="/premium/" class="hidden-sm-down btn navbar-tropyc-button">Premium</a>
+  </div>
+
+  <!-- Dropdown appearing on mobile only -->
+  <div class="navbar-tropyc-item hidden-md-up">
+    <div class="dropdown">
+      <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+      <ul class="dropdown-menu dropdown-menu-right navbar-tropyc-dropdown-menu">
+        {{ $currentPage := . }}
+        {{ range .Site.Menus.main }}
+          <li><a href="{{ .URL }}" class="navbar-tropyc-item navbar-tropyc-link" {{if  $currentPage.IsMenuCurrent "main" . }} class="active"{{end}}>{{ .Name }}</a></li>
+        {{end}}
+        <li><a href="/premium/" class="navbar-tropyc-item navbar-tropyc-link">Premium</a></li>
+      </ul>
+    </div>
+  </div>
+</div>
