--- a/layouts/partials/toc.html
+++ b/layouts/partials/toc.html
@@ -12,7 +12,7 @@ tocSelector: '.js-toc',
 // Where to grab the headings to build the table of contents.
 contentSelector: '.content',
 // Which headings to grab inside of the contentSelector element.
-headingSelector: 'h3'
+headingSelector: 'h2, h3'
 })
 }
 );
