--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -4,11 +4,11 @@
 {{ define "main" }}
 
 <div class="container">
-  <div id="hero" class="wrap">
+  <div class="hero">
     <h1>{{.Title }}</h1>
       <p>{{.Params.description}}</p>
   </div>
-  <ul id="posts">
+  <ul class="posts">
 
    {{ .Content }}
 
