--- a/layouts/partials/favicon.html
+++ b/layouts/partials/favicon.html
@@ -1,2 +1,2 @@
-<link rel="shortcut icon" type="image/png" href="/images/{{ index .Site.Data.images.hash "favicons/favicon-32x32.png" }}" sizes="32x32" />
-<link rel="shortcut icon" type="image/png" href="/images/{{ index .Site.Data.images.hash "favicons/favicon-16x16.png" }}" sizes="16x16" />
+<link rel="shortcut icon" type="image/png" href="/images/{{ index $.Site.Data.images.hash "favicons/favicon-32x32.png" }}" sizes="32x32" />
+<link rel="shortcut icon" type="image/png" href="/images/{{ index $.Site.Data.images.hash "favicons/favicon-16x16.png" }}" sizes="16x16" />
