--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-  <footer id="footer">
+  <footer class="footer">
     <nav>
       <ul>
         <li><span>Tropyc</span></li>
@@ -6,10 +6,7 @@
           <a href="/company/">Company</a>
         </li>
         <li>
-          <a href="/blog/">Blog</a>
-        </li>
-          <li>
-          <a href="/docs/">Docs</a>
+          <a href="/news/">News</a>
         </li>
         <li>
           <a href="https://t.me/{{.Site.Params.telegram}}" target="_blank">Join us on Telegram</a>
