--- a/layouts/partials/header.html
+++ b/layouts/partials/header.html
@@ -1,7 +1,7 @@
 <div class="navbar-tropyc">
   <!-- Logo -->
   <a href="/" title="home" class="navbar-tropyc-brand">
-    <img src="/images/{{ index .Site.Data.images.hash "tropyc-logo.png" }}" alt="logo">
+    <img src="/images/{{ index $.Site.Data.images.hash "tropyc-logo.png" }}" alt="logo">
     <span class="navbar-tropyc-brand__name">tropyc.</span>
   </a>
 
