--- a/src/scss/layout/_footer.scss
+++ b/src/scss/layout/_footer.scss
@@ -1,4 +1,4 @@
-#footer {
+.footer {
   display: flex;
   border-top: 1px solid #eee;
   margin: 100px 0;
@@ -21,7 +21,8 @@
         margin-left: 20px;
 
         span {
-          color: rgba(0, 0, 0, 0.3);
+          font-weight: bold;
+          color: $brand-primary;
         }
 
         a {
