--- a/layouts/_default/section.html
+++ b/layouts/_default/section.html
@@ -2,11 +2,17 @@
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 <div class="container">
-  <div id="main">
-    <div id="hero">
+  <div class="main">
+    <div class="hero">
       <h1>{{ .Title }}</h1>
+      <p>
+        {{ .Params.bref | safeHTML }}
+      </p>
     </div>
-    <div id="components">
+    <div class="content">
+      {{ .Content }}
+    </div>
+    <div class="components">
       <div class="row gutters">
         {{ if .Sections }}
           {{ range .Sections }}
