--- a/layouts/doc/single.html
+++ b/layouts/doc/single.html
@@ -2,13 +2,12 @@
 {{ define "header"}} {{ partial "header" .}} {{end}}
 {{ define "main"}}
 <div class="container">
-  <div id="main">
-    <div id="hero">
+  <div class="main">
+    <div class="hero">
       <h1> {{ .Title}} </h1>
-      <p class="hero-lead">
-           {{ .Params.bref | safeHTML }}.
+      <p>
+        {{ .Params.bref | safeHTML }}
       </p>
-
     </div>
     <div id="kube-component" class="content">
     {{ partial "toc" .}}
