--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,8 +3,8 @@
 {{ define "main"}}
 
 <div class="container">
-	<div id="main">
-	  <div id="hero">
+	<div class="main">
+	  <div class="hero">
 	    <h1>{{.Title}}</h1>
 	    <p>{{.Description}}</p>
 	  </div>
