--- a/layouts/news/single.html
+++ b/layouts/news/single.html
@@ -5,15 +5,15 @@
 <div class="container">
   <div class="push-center" itemscope itemtype="http://schema.org/BlogPosting">
       {{ template "_internal/schema.html" . }}
-    <div id="hero">
+    <div class="hero">
         <h1 itemprop="headline">  {{.Title}}</h1>
         {{ if .Description }}
     <blockquote itemprop="description">{{ .Description }}</blockquote>
     {{ end }}
     <time class="post-time">{{ partial "post/meta" . }}</time>
     </div>
-    <div id="post-box">
-      <div id="post" itemprop="articleBody">
+    <div class="post-box">
+      <div class="post" itemprop="articleBody">
 
           {{.Content | safeHTML}}
 
