--- a/src/scss/abstracts/_variables.scss
+++ b/src/scss/abstracts/_variables.scss
@@ -341,7 +341,7 @@ $table-inverse-bg:              $gray-dark !default;
 $table-inverse-color:           $body-bg !default;
 
 $table-bg-accent:               rgba($brand-primary,.05) !default;
-$table-bg-hover:                rgba($black,.075) !default;
+$table-bg-hover:                rgba($brand-primary,.09) !default;
 $table-bg-active:               $table-bg-hover !default;
 
 $table-head-bg:                 $gray-lighter !default;
