--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -14,3 +14,10 @@ html {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+
+
+.label {
+  font-size: 14px;
+  color: #6f8691;
+  margin-bottom: 10px;
+}
