--- a/src/scss/pages/_token-detail.scss
+++ b/src/scss/pages/_token-detail.scss
@@ -5,7 +5,7 @@
 .token-overview {
   margin: 50px 0;
   padding: 40px;
-  border: 1px solid #CCC;
+  border: 1px solid #DDD;
   border-radius: .25rem;
 
   .token-id {
@@ -22,12 +22,17 @@
 }
 
 .token-description {
-
   .tab-content {
     padding: 30px;
     border: solid #DDD;
     border-width: 0 1px 1px 1px;
     border-bottom-left-radius: .25rem;
     border-bottom-right-radius: .25rem;
+  }
+}
+
+.deal-table {
+  tbody > tr:last-child td {
+    border-width: 2px;
   }
 }
