changes font to Montserrat

--- a/src/scss/base/_base.scss
+++ b/src/scss/base/_base.scss
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto", "Open Sans",  serif;
+  font-family: "Montserrat", "Open Sans",  serif;
   /* Margin bottom by footer height */
   margin-bottom: 100px;
   line-height: 1.6;
